# citylab_project

./: README.md  how_to.txt  plan_checkpoint6.txt
robot_patrol/: CMakeLists.txt  package.xml
robot_patrol/launch/: main.launch.py  start_gotopose_action.launch.py  start_gotopose_action_server_looping_circuit.py  start_test_action.launch.py  start_test_service.launch.py  understand_laser.launch.py
robot_patrol/src/: curren_patrol.cpp  direction_service.cpp  go_to_pose_action.cpp  go_to_pose_action_looping.cpp  patrol.cpp  patrol_with_service.cpp  prev_wrong_understanding_of_laser_scan.cpp  test_action.cpp  test_service.cpp  understand_laser.cpp  wideband.cpp  wrong_way_after_real_robot.cpp  wrong_way_after_real_robot2.cpp
world/: doors_obstracle_instead_of_prism.world  doors_obstracle_instead_of_prism_opposite.world  easy_world.world  empty_world.world  right_is_near_atstart.world
